[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scrpits/World.gd" type="Script" id=1]
[ext_resource path="res://addons/kenney_prototype_textures/orange/texture_08.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1024, 5 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Suelo" type="StaticBody2D" parent="."]
scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Suelo1" type="Sprite" parent="Suelo"]
visible = false
position = Vector2( 0, -506 )
texture = ExtResource( 2 )

[node name="Suelo2" type="Sprite" parent="Suelo"]
position = Vector2( 1024, -506 )
texture = ExtResource( 2 )

[node name="Suelo3" type="Sprite" parent="Suelo"]
position = Vector2( 0, 518 )
texture = ExtResource( 2 )

[node name="Suelo4" type="Sprite" parent="Suelo"]
position = Vector2( 1024, 518 )
texture = ExtResource( 2 )

[node name="Pared1" type="CollisionShape2D" parent="Suelo"]
position = Vector2( 512, -1023 )
shape = SubResource( 1 )

[node name="Pared2" type="CollisionShape2D" parent="Suelo"]
position = Vector2( 1541, 6 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Pared3" type="CollisionShape2D" parent="Suelo"]
position = Vector2( -517, 6 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Pared4" type="CollisionShape2D" parent="Suelo"]
position = Vector2( 512, -1023 )
shape = SubResource( 1 )

[node name="Instancias_Mobs" type="Node2D" parent="."]
position = Vector2( 410, 5 )

[node name="Timers" type="Node" parent="."]

[node name="TimerOleada" type="Timer" parent="Timers"]
one_shot = true

[node name="TimerSpawn" type="Timer" parent="Timers"]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="CuentaAtras" type="Label" parent="UI"]
margin_left = 357.0
margin_top = 2.0
margin_right = 397.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
text = "hols"
align = 1
valign = 1
autowrap = true

[connection signal="timeout" from="Timers/TimerOleada" to="." method="_on_TimerOleada_timeout"]
[connection signal="timeout" from="Timers/TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
